codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chat_small_running_h2.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 2454
expression: normalized_backend_snapshot(terminal.backend())
---
"                                        "
" Elpis · model gpt-5.6-sol · location /t"
