codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 5742
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---











• I’m going to search the repo for where “Change Approved” is rendered to update
  that view.

• Explored
  └ Search Change Approved
    Read diff_render.rs

 Elpis · model gpt-5.6-sol default · location /tmp/project
Investigating rendering code (0s • esc to inter…│CONTEXT LEDGER  context not
                                                │measured · ≈0 source estimates
│                                               │Tab controls · Alt+C hide ·
› Summarize recent commits                      │Ctrl+click open file
│                                               │
  enter to queue message                        │SMART PRUNE          [···] SYNC
                                                │Reading current thread state
                                                │Syncing… · /smart-prune on|off
                                                │sets an explicit state
                                                │
                                                │SUBAGENTS             [━━━●] ON
                                                │May delegate to other agents
                                                │
                                                │CONTEXT WINDOW  usage
                                                │unavailable
                                                │Context measurement unavailable
                                                │until the first request
                                                │snapshot
                                                │
                                                │No portable context is
                                                │available.
