codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completed_hook_with_output_flushes_immediately_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 4445
expression: "format!(\"{running_snapshot}\\n\\n{completed_snapshot}\")"
---
running
activity:
"                                                                                "
" Elpis · model gpt-5.6-sol default · location /tmp/project                      "
"• Checking command                              │ CONTEXT LEDGER  context not   "
"                                                │ measured · ≈0 source          "
"────────────────────────────────────────────────┤ estimates                     "
"› Ask Elpis to do anything                      │ Tab controls · Alt+C hide ·   "
"────────────────────────────────────────────────┤ Ctrl+click open file          "
"  tab  open the Context Ledger and choose what …│                               "
"                                                │ SMART PRUNE       [···] SYNC  "
"                                                │ Reading current thread state  "
"                                                │ Syncing… · /smart-prune on|   "
"                                                │ off sets an explicit state    "
"                                                │                               "
"                                                │ SUBAGENTS          [━━━●] ON  "
"                                                │ May delegate to other agents  "
"                                                │                               "
"                                                │ CONTEXT WINDOW  usage         "
"                                                │ unavailable                   "
"                                                │ Context measurement           "
"                                                │ unavailable until the first   "
"                                                │ request snapshot              "
"                                                │                               "
"                                                │ No portable context is        "
"                                                │ available.                    "
history:
<empty>

completed
activity:
"                                                                                "
" Elpis · model gpt-5.6-sol default · location /tmp/project                      "
"────────────────────────────────────────────────┐ CONTEXT LEDGER  context not   "
"› Ask Elpis to do anything                      │ measured · ≈0 source          "
"────────────────────────────────────────────────┤ estimates                     "
"  tab  open the Context Ledger and choose what …│ Tab controls · Alt+C hide ·   "
"                                                │ Ctrl+click open file          "
"                                                │                               "
"                                                │ SMART PRUNE       [···] SYNC  "
"                                                │ Reading current thread state  "
"                                                │ Syncing… · /smart-prune on|   "
"                                                │ off sets an explicit state    "
"                                                │                               "
"                                                │ SUBAGENTS          [━━━●] ON  "
"                                                │ May delegate to other agents  "
"                                                │                               "
"                                                │ CONTEXT WINDOW  usage         "
"                                                │ unavailable                   "
"                                                │ Context measurement           "
"                                                │ unavailable until the first   "
"                                                │ request snapshot              "
"                                                │                               "
"                                                │ No portable context is        "
"                                                │ available.                    "
history:
• Blocked by hook
  └ command blocked by policy
